--- a/Katatsuki.API/Katatsuki.API.csproj
+++ b/Katatsuki.API/Katatsuki.API.csproj
@@ -62,6 +62,7 @@
     <Compile Include="SqliteDatabase.cs" />
     <Compile Include="Track.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TrackboxMassEventArgs.cs" />
     <Compile Include="TrackboxEventArgs.cs" />
     <Compile Include="TrackboxListener.cs" />
     <Compile Include="TrackDatabase.cs" />
