cleanup elapsed timer

--- a/Katatsuki/Katatsuki.csproj
+++ b/Katatsuki/Katatsuki.csproj
@@ -59,7 +59,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="LibraryListenerNotifyIcon.cs" />
+    <Compile Include="LibraryListener.cs" />
     <Compile Include="EnumConverter.cs" />
     <Compile Include="KatatsukiContext.cs" />
     <Compile Include="StringListConverter.cs" />
