--- a/Katatsuki.API/Katatsuki.API.csproj
+++ b/Katatsuki.API/Katatsuki.API.csproj
@@ -60,12 +60,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Library.cs" />
+    <Compile Include="SqliteDatabase.cs" />
     <Compile Include="Track.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TrackboxCorruptedEventArgs.cs" />
     <Compile Include="TrackboxMassEventArgs.cs" />
     <Compile Include="TrackboxEventArgs.cs" />
     <Compile Include="TrackboxListener.cs" />
+    <Compile Include="TrackDatabase.cs" />
     <Compile Include="TrackFileTypes.cs" />
   </ItemGroup>
   <ItemGroup>
